--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>webpack 4 quickstart</title>
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>product-langing-page</title>
 </head>
+
 <body>
-    <div id="app">
+  <header id="header">
+    <div id="logo">
+      <img id="header-img" src="/src/multimedia/original_trombones.png" alt="Original Trombones">
     </div>
+    <nav id="nav-bar">
+      <a id="feature" href="#" class="nav-link">Features</a>
+      <a id="how_it_works" href="#" class="nav-link">How It Works</a>
+      <a id="pricing" href="#" class="nav-link">Pricing</a>
+    </nav>
+  </header>
+  <main>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+  </main>
+  <footer></footer>
+
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
+
 </html>
