feat main container

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,22 @@
       <a id="pricing" href="#" class="nav-link">Pricing</a>
     </nav>
   </header>
-  <main>
-    <section></section>
-    <section></section>
-    <section></section>
+  <main id="container">
+    <section id="get_start">
+      <div class="ji">
+        <h1>1</h1>
+      </div>
+    </section>
+    <section id="a">
+      <div>
+        <h1>a</h1>
+      </div>
+    </section>
+    <section id="b">
+      <div>
+        <h1>b</h1>
+      </div>
+    </section>
     <section></section>
   </main>
   <footer></footer>
