--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>product-langing-page</title>
+
+  <!-- fontawesome icons -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
 <body>
@@ -18,24 +21,31 @@
     </nav>
   </header>
   <main id="container">
-    <section id="get_start">
-      <div class="ji">
-        <h1>1</h1>
-      </div>
+    <section id="email">
+      <form class="form">
+        <h1>Handcrafted, home-made masterpieces</h1>
+        <input type="Email" placeholder="Enter your email adress">
+        <button>GET STARTED</button>
+      </form>
     </section>
-    <section id="a">
+    <section id="description">
       <div>
-        <h1>a</h1>
+        <h1>description</h1>
       </div>
     </section>
-    <section id="b">
-      <div>
-        <h1>b</h1>
-      </div>
+    <section id="video">
+      <iframe src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
     </section>
-    <section></section>
+    <section id="product">
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
   </main>
-  <footer></footer>
+  <footer>
+    <h1>footer</h1>
+  </footer>
 
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
