feat info icons

--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,10 @@
       </form>
     </section>
     <section id="description">
-      <div>
-        <h1>description</h1>
-      </div>
+      <!-- https://fontawesome.com/how-to-use/on-the-web/setup/getting-started -->
+      <i class="fas fa-crown"></i>
+      <i class="fas fa-truck"></i>
+      <i class="fas fa-battery-full"></i>
     </section>
     <section id="video">
       <iframe src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="autoplay; encrypted-media"
