--- a/src/index.html
+++ b/src/index.html
@@ -1,54 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta
+      charset="utf-8"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>product-langing-page</title>
 
-<head>
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>product-langing-page</title>
+    <!-- fontawesome icons -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
+  </head>
 
-  <!-- fontawesome icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-</head>
+  <body>
+    <header id="header">
+      <div id="logo">
+        <img
+          id="header-img"
+          src="/src/multimedia/original_trombones.png"
+          alt="Original Trombones"
+        />
+      </div>
+      <nav id="nav-bar">
+        <a id="feature" href="#" class="nav-link">Features</a>
+        <a id="how_it_works" href="#" class="nav-link">How It Works</a>
+        <a id="pricing" href="#" class="nav-link">Pricing</a>
+      </nav>
+    </header>
+    <main id="container">
+      <section id="email">
+        <form class="form">
+          <h1>Handcrafted, home-made masterpieces</h1>
+          <input type="Email" placeholder="Enter your email adress" />
+          <button>GET STARTED</button>
+        </form>
+      </section>
+      <section id="description">
+        <!--
+          https://fontawesome.com/how-to-use/on-the-web/setup/getting-started
+        -->
+        <i class="fas fa-crown"></i>
+        <div class="premium_materials_container">
+          <h class="premium_materials">AAA</h>
+          <p class="premium_materials">aaa</p>
+        </div>
+        <i class="fas fa-truck"></i>
+        <div class="fast_shipping_container">
+          <h class="fast_shipping">BBB</h>
+          <p class="fast_shipping">bbb</p>
+        </div>
+        <i class="fas fa-battery-full"></i>
+        <div class="quality_assurance_container">
+          <h class="quality_assurance">CCC</h>
+          <p class="quality_assurance">ccc</p>
+        </div>
+      </section>
+      <section id="video">
+        <iframe
+          src="https://www.youtube.com/embed/y8Yv4pnO7qc"
+          frameborder="0"
+          allow="autoplay; encrypted-media"
+          allowfullscreen
+        ></iframe>
+      </section>
+      <section id="product">
+        <div></div>
+        <div></div>
+        <div></div>
+      </section>
+    </main>
+    <footer><h1>footer</h1></footer>
 
-<body>
-  <header id="header">
-    <div id="logo">
-      <img id="header-img" src="/src/multimedia/original_trombones.png" alt="Original Trombones">
-    </div>
-    <nav id="nav-bar">
-      <a id="feature" href="#" class="nav-link">Features</a>
-      <a id="how_it_works" href="#" class="nav-link">How It Works</a>
-      <a id="pricing" href="#" class="nav-link">Pricing</a>
-    </nav>
-  </header>
-  <main id="container">
-    <section id="email">
-      <form class="form">
-        <h1>Handcrafted, home-made masterpieces</h1>
-        <input type="Email" placeholder="Enter your email adress">
-        <button>GET STARTED</button>
-      </form>
-    </section>
-    <section id="description">
-      <!-- https://fontawesome.com/how-to-use/on-the-web/setup/getting-started -->
-      <i class="fas fa-crown"></i>
-      <i class="fas fa-truck"></i>
-      <i class="fas fa-battery-full"></i>
-    </section>
-    <section id="video">
-      <iframe src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="autoplay; encrypted-media"
-        allowfullscreen></iframe>
-    </section>
-    <section id="product">
-      <div></div>
-      <div></div>
-      <div></div>
-    </section>
-  </main>
-  <footer>
-    <h1>footer</h1>
-  </footer>
-
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-</body>
-
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  </body>
 </html>
