feat product trombone basic view

--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,24 @@
         ></iframe>
       </section>
       <section id="product">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="trombone_product">
+          <h3 class="product_title">TROMBONE</h3>
+          <h1 class="product_price">$600</h1>
+          <p class="product_description">Lorem ipsum. Lorem ipsum!</p>
+          <button class="product_btn_select">SELECT</button>
+        </div>
+        <div class="trombone_product">
+          <h3 class="product_title">TROMBONE</h3>
+          <h1 class="product_price">$900</h1>
+          <p class="product_description">Lorem ipsum. Lorem ipsum!</p>
+          <button class="product_btn_select">SELECT</button>
+        </div>
+        <div class="trombone_product">
+          <h3 class="product_title">TROMBONE</h3>
+          <h1 class="product_price">$1200</h1>
+          <p class="product_description">Lorem ipsum. Lorem ipsum!</p>
+          <button class="product_btn_select">SELECT</button>
+        </div>
       </section>
     </main>
     <footer><h1>footer</h1></footer>
